# IPAMviewer

./: .gitignore  pyproject.toml
ipamviewer/: apiclient.py  app.py  sshclient.py
ipamviewer/static/css/: style.css
ipamviewer/templates/: error.html  index.html
